examples/phone/y.output

state 0
	$accept: .start $end 

	'('  shift 4
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 5
	area_code  goto 3
	phone_number  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  phone_number.    (1)

	.  reduce 1 (src line 43)


state 3
	phone_number:  area_code.'-' exchange '-' subscriber 
	phone_number:  area_code.' ' exchange ' ' subscriber 
	phone_number:  area_code.'.' exchange '.' subscriber 

	'-'  shift 14
	'.'  shift 16
	' '  shift 15
	.  error


state 4
	phone_number:  '('.area_code ')' ' ' exchange '-' subscriber 

	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 5
	area_code  goto 17

state 5
	area_code:  digit_2_9.digit digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 18

state 6
	digit_2_9:  '2'.    (9)

	.  reduce 9 (src line 85)


state 7
	digit_2_9:  '3'.    (10)

	.  reduce 10 (src line 90)


state 8
	digit_2_9:  '4'.    (11)

	.  reduce 11 (src line 94)


state 9
	digit_2_9:  '5'.    (12)

	.  reduce 12 (src line 98)


state 10
	digit_2_9:  '6'.    (13)

	.  reduce 13 (src line 102)


state 11
	digit_2_9:  '7'.    (14)

	.  reduce 14 (src line 106)


state 12
	digit_2_9:  '8'.    (15)

	.  reduce 15 (src line 110)


state 13
	digit_2_9:  '9'.    (16)

	.  reduce 16 (src line 114)


state 14
	phone_number:  area_code '-'.exchange '-' subscriber 

	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 23
	exchange  goto 22

state 15
	phone_number:  area_code ' '.exchange ' ' subscriber 

	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 23
	exchange  goto 24

state 16
	phone_number:  area_code '.'.exchange '.' subscriber 

	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 23
	exchange  goto 25

state 17
	phone_number:  '(' area_code.')' ' ' exchange '-' subscriber 

	')'  shift 26
	.  error


state 18
	area_code:  digit_2_9 digit.digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 27

state 19
	digit:  '0'.    (17)

	.  reduce 17 (src line 119)


state 20
	digit:  '1'.    (18)

	.  reduce 18 (src line 124)


state 21
	digit:  digit_2_9.    (19)

	.  reduce 19 (src line 128)


state 22
	phone_number:  area_code '-' exchange.'-' subscriber 

	'-'  shift 28
	.  error


state 23
	exchange:  digit_2_9.digit digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 29

state 24
	phone_number:  area_code ' ' exchange.' ' subscriber 

	' '  shift 30
	.  error


state 25
	phone_number:  area_code '.' exchange.'.' subscriber 

	'.'  shift 31
	.  error


state 26
	phone_number:  '(' area_code ')'.' ' exchange '-' subscriber 

	' '  shift 32
	.  error


state 27
	area_code:  digit_2_9 digit digit.    (6)

	.  reduce 6 (src line 67)


state 28
	phone_number:  area_code '-' exchange '-'.subscriber 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 34
	subscriber  goto 33

state 29
	exchange:  digit_2_9 digit.digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 35

state 30
	phone_number:  area_code ' ' exchange ' '.subscriber 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 34
	subscriber  goto 36

state 31
	phone_number:  area_code '.' exchange '.'.subscriber 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 34
	subscriber  goto 37

state 32
	phone_number:  '(' area_code ')' ' '.exchange '-' subscriber 

	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 23
	exchange  goto 38

state 33
	phone_number:  area_code '-' exchange '-' subscriber.    (2)

	.  reduce 2 (src line 49)


state 34
	subscriber:  digit.digit digit digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 39

state 35
	exchange:  digit_2_9 digit digit.    (7)

	.  reduce 7 (src line 73)


state 36
	phone_number:  area_code ' ' exchange ' ' subscriber.    (4)

	.  reduce 4 (src line 58)


state 37
	phone_number:  area_code '.' exchange '.' subscriber.    (5)

	.  reduce 5 (src line 62)


state 38
	phone_number:  '(' area_code ')' ' ' exchange.'-' subscriber 

	'-'  shift 40
	.  error


state 39
	subscriber:  digit digit.digit digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 41

state 40
	phone_number:  '(' area_code ')' ' ' exchange '-'.subscriber 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 34
	subscriber  goto 42

state 41
	subscriber:  digit digit digit.digit 

	'0'  shift 19
	'1'  shift 20
	'2'  shift 6
	'3'  shift 7
	'4'  shift 8
	'5'  shift 9
	'6'  shift 10
	'7'  shift 11
	'8'  shift 12
	'9'  shift 13
	.  error

	digit_2_9  goto 21
	digit  goto 43

state 42
	phone_number:  '(' area_code ')' ' ' exchange '-' subscriber.    (3)

	.  reduce 3 (src line 54)


state 43
	subscriber:  digit digit digit digit.    (8)

	.  reduce 8 (src line 79)


18 terminals, 8 nonterminals
20 grammar rules, 44/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 41/240000
11 extra closures
168 shift entries, 1 exceptions
27 goto entries
13 entries saved by goto default
Optimizer space used: output 78/240000
78 table entries, 15 zero
maximum spread: 18, maximum offset: 41
